--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@ ol {
 .result__video {
   width: 711px;
   height: 386px;
-  object-fit: contain;
+  object-fit: cover;
   cursor: pointer;
 }
 
@@ -110,7 +110,7 @@ ol {
 
 .content__video-card-thumbnail {
   height: 103px;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .content__video-card-description-container {
@@ -196,6 +196,10 @@ ol {
   cursor: pointer;
 }
 
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+}
+
 .button {
   box-sizing: border-box;
   height: 34px;
@@ -249,12 +253,12 @@ ol {
   text-align: left;
   background-color: transparent;
   appearance: none;
-  font-family: Fira Sans Condensed;
-font-size: 18px;
-font-weight: 400;
-line-height: 22px;
-letter-spacing: 0em;
-text-align: left;
+  font-family: 'Fira Sans Condensed', sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
 
 }
 
@@ -269,7 +273,6 @@ text-align: left;
   width: 19px;
   height: 19px;
   border: 1px solid #FFFFFF;
-  vertical-align: middle;
   margin-right: 5px;
 }
 
